--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,57 @@
       <version>5.1</version>
     </dependency>
 
+<!--    <dependency>-->
+<!--      <groupId>org.thymeleaf</groupId>-->
+<!--      <artifactId>thymeleaf</artifactId>-->
+<!--      <version>3.1.2.RELEASE</version>-->
+<!--    </dependency>-->
+
+<!--    <dependency>-->
+<!--      <groupId>org.xhtmlrenderer</groupId>-->
+<!--      <artifactId>flying-saucer-pdf</artifactId>-->
+<!--      <version>9.5.1</version>-->
+<!--    </dependency>-->
+
+<!--    <dependency>-->
+<!--      <groupId>org.xhtmlrenderer</groupId>-->
+<!--      <artifactId>flying-saucer-core</artifactId>-->
+<!--      <version>9.7.0</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.xhtmlrenderer</groupId>-->
+<!--      <artifactId>flying-saucer-pdf-itext5</artifactId>-->
+<!--      <version>9.7.0</version>-->
+<!--    </dependency>-->
+
+<!--    <dependency>-->
+<!--      <groupId>com.itextpdf</groupId>-->
+<!--      <artifactId>itext-asian</artifactId>-->
+<!--      <version>5.2.0</version>-->
+<!--    </dependency>-->
+
+    <dependency>
+      <groupId>org.xhtmlrenderer</groupId>
+      <artifactId>flying-saucer-core</artifactId>
+      <version>9.7.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.xhtmlrenderer</groupId>
+      <artifactId>flying-saucer-pdf-itext5</artifactId>
+      <version>9.7.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.xhtmlrenderer</groupId>
+      <artifactId>flying-saucer-pdf</artifactId>
+      <version>9.7.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.rythmengine</groupId>
+      <artifactId>rythm-engine</artifactId>
+      <version>1.3.0</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
